--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
 name = "sysfs-pwm"
 version = "0.1.1"
-authors = ["Paul Osborne <osbpau@gmail.com>"]
+authors = ["Rust Embedded WG Linux Team <embedded-linux@teams.rust-embedded.org>",
+           "Paul Osborne <osbpau@gmail.com>"]
 license = "MIT/Apache-2.0"
 homepage = "https://github.com/posborne/rust-sysfs-pwm"
 documentation = "https://posborne.github.io/rust-sysfs-pwm"
