--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,8 @@ edition = "2021"
 authors = ["Rust Embedded WG Linux Team <embedded-linux@teams.rust-embedded.org>",
            "Paul Osborne <osbpau@gmail.com>"]
 license = "MIT/Apache-2.0"
-homepage = "https://github.com/posborne/rust-sysfs-pwm"
-documentation = "https://posborne.github.io/rust-sysfs-pwm"
+homepage = "https://github.com/rust-embedded/rust-sysfs-pwm"
+documentation = "https://docs.rs/rust-sysfs-pwm"
 description = """
 Provides access to the Linux sysfs interfaces to PWMs.
 Via this crate you can export, unexport, and control PWM pins for
