--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "sysfs-pwm"
 version = "0.2.0"
+edition = "2021"
 authors = [
     "Rust Embedded WG Linux Team <embedded-linux@teams.rust-embedded.org>",
     "Paul Osborne <osbpau@gmail.com>"
