use only necessary tokio features

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,4 +20,4 @@ See https://www.kernel.org/doc/Documentation/pwm.txt
 readme = "README.md"
 
 [dependencies]
-tokio = { version = "1", features = ["full"] }
+tokio = { version = "1", features = ["io-util", "fs"] }
