--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
           - aarch64-unknown-linux-gnu
           - aarch64-unknown-linux-musl
           - arm-unknown-linux-gnueabi
-          - arm-unknown-linux-gnueabihf
+          # - arm-unknown-linux-gnueabihf # not supported by the CI at the moment
           - armv7-unknown-linux-gnueabihf
           - i686-unknown-linux-gnu
           - i686-unknown-linux-musl
@@ -41,7 +41,7 @@ jobs:
             experimental: true
 
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v5
       - uses: dtolnay/rust-toolchain@master
         with:
           toolchain: ${{ matrix.rust }}
@@ -50,21 +50,17 @@ jobs:
       - run: cargo build --target=${{ matrix.TARGET }}
 
       - name: Test
-        uses: actions-rs/cargo@v1
+        uses: taiki-e/setup-cross-toolchain-action@v1
         with:
-          use-cross: true
-          command: test
-          args: --target=${{ matrix.TARGET }}
+          target: ${{ matrix.TARGET }}
+      - run: cargo test --target=${{ matrix.TARGET }}
 
   ci-linux-msrv:
     name: CI-MSRV
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: dtolnay/rust-toolchain@master
-        with:
-          toolchain: 1.28.0
-
+      - uses: actions/checkout@v5
+      - uses: dtolnay/rust-toolchain@1.28.0
       - run: cargo build
       - run: cargo test
 
@@ -73,7 +69,7 @@ jobs:
     runs-on: macos-latest
 
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v5
       - uses: dtolnay/rust-toolchain@stable
       - run: cargo build
 
@@ -81,7 +77,7 @@ jobs:
     name: CI-macOS-MSRV
     runs-on: macos-13 # Latest for Intel-based CPUs
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v5
       - uses: dtolnay/rust-toolchain@1.28.0
       - run: cargo build
 
@@ -89,7 +85,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v5
       - uses: dtolnay/rust-toolchain@stable
         with:
           components: rustfmt
@@ -102,8 +98,8 @@ jobs:
     env:
       RUSTFLAGS: '--allow warnings'
     steps:
-      - uses: actions/checkout@v4
-      - uses: dtolnay/rust-toolchain@1.84.1
+      - uses: actions/checkout@v5
+      - uses: dtolnay/rust-toolchain@1.91.1
         with:
           components: clippy
       - run: cargo clippy --all-targets
