Use macos-15-intel instead of macos-13
Support for macos-13 was removed, see https://github.com/actions/runner-images/issues/13046

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -75,7 +75,7 @@ jobs:
 
   ci-macos-msrv:
     name: CI-macOS-MSRV
-    runs-on: macos-13 # Latest for Intel-based CPUs
+    runs-on: macos-15-intel # Latest for Intel-based CPUs
     steps:
       - uses: actions/checkout@v5
       - uses: dtolnay/rust-toolchain@1.28.0
